--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ matplotlib~=3.7.3
 seaborn~=0.13.0
 pandas~=2.0.3
 scipy~=1.10.1
+scikit-learn~=1.3.1
+construct~=2.8.16
+tabulate~=0.9.0
+mgz~=1.8.23
+setuptools~=68.2.2
